--- a/style/main.scss
+++ b/style/main.scss
@@ -26,8 +26,8 @@ nav {
     width: 100%;
     display: flex;
     justify-content: center;
-    z-index: 1000;
-    position: relative;
+    z-index: 1000000;
+    // position: relative;
     // padding: 25px 0;
     .btn {
         margin: 0 4px;
